# High-Precision-AOCS

./: .gitattributes  .gitignore  PROJECT_DOCUMENTATION.md  README.md  WARP.md  aocs_mission_log.csv  brace_balance_until.ps1  build_release.bat  count_braces.ps1  count_range.ps1  count_segment_braces.ps1  create_distribution.bat  find_unmatched_brace.ps1  find_unmatched_brace_smart.ps1  first_unclosed.ps1  imgui.ini  realtime_aocs_mission.csv  rw_debug_toggle.txt
src/cpp/: CMakeLists.txt  CMakeLists_GUI.txt  CMakeLists_Simple.txt  OrbitalEnvironment.cpp  OrbitalEnvironment.h  Quaternion.cpp  Quaternion.h  SpacecraftDynamics.cpp  SpacecraftDynamics.h  Vector3.cpp  Vector3.h  anti_alignment_aocs_mission.csv  aocs_gui_main.cpp  aocs_jump_fixes.cpp  aocs_jump_fixes_console.cpp  aocs_realtime_gui.cpp  aocs_realtime_gui.hpp  aocs_realtime_simulator.cpp  aocs_realtime_simulator_fixed.cpp  build_gui.bat  build_integrated_debug.bat  complex_dynamics_mission.csv  complex_dynamics_simulator.cpp  control_demo.csv  dataExporter.cpp  dataExporter.h  imgui.ini  integration_test.csv  orbital_anti_alignment_simulator.cpp  orbital_aocs_simulator_professional.cpp  test_aocs_no_actuators.cpp  test_hybrid_control.cpp  test_quaternion.cpp  test_vector.cpp
src/cpp/build_gui/: CMakeCache.txt  aocs_user_presets.jsonl  cmake_install.cmake
src/cpp/csv tests/: preset_Fine_Pointing_results.csv  preset_Hardware_Degraded_results.csv  preset_Slew_Maneuver_results.csv  preset_Sun_Acquisition_results.csv
src/cpp/dependencies/cmake/: .gitignore
src/cpp/imgui/examples/example_sdl2_directx11/: main.cpp
src/python/: aocs_3d_attitude_visualizer.py  aocs_performance_analyzer.py  aocs_realtime_visualizer.py  aocs_visualizer_suite.py  install_dependencies.bat  launch_3d_visualizer.bat  launch_aocs_visualizer.bat  launch_performance_analyzer.bat  launch_realtime_dashboard.bat
src/python/aocs_analysis/: performance_report_20250924_192139.txt
